WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46356
IDBTransactionCoordinator contains a broken assertion.
https://bugs.webkit.org/show_bug.cgi?id=46356
Summary
IDBTransactionCoordinator contains a broken assertion.
Andrei Popescu
Reported
2010-09-23 08:30:15 PDT
IDBTransactionCoordinator contains a broken assertion.
Attachments
Patch
(1.36 KB, patch)
2010-09-23 08:33 PDT
,
Andrei Popescu
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2010-09-23 08:33:33 PDT
Created
attachment 68523
[details]
Patch
Jeremy Orlow
Comment 2
2010-09-23 08:36:09 PDT
Comment on
attachment 68523
[details]
Patch r=me
Andrei Popescu
Comment 3
2010-09-23 08:38:07 PDT
Committed
r68143
: <
http://trac.webkit.org/changeset/68143
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug