2010-09-23  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        IDBTransactionCoordinator contains a broken assertion.
        https://bugs.webkit.org/show_bug.cgi?id=46356

        Remove the broken assertion.

        * storage/IDBTransactionCoordinator.cpp:
        (WebCore::IDBTransactionCoordinator::processStartedTransactions):

Canonical link: https://commits.webkit.org/58842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68143 268f45cc-cd09-0410-ab3c-d52691b4dbfc